# SwellDB

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
config/: config.yaml  swelldb_config.json.example
examples/: README.md  swell_dsa_questions.ipynb  swelldb_basic.ipynb  swelldb_dsa.ipynb  swelldb_dsa_chain.ipynb  swelldb_mutations.ipynb  swelldb_quickstart.py  swelldb_table_chain.ipynb
swelldb/: swelldb.py  utils.py
swelldb/common/: document_loader.py  text.py
swelldb/llm/: abstract_llm.py  deepseek_llm.py  ollama_llm.py  openai_llm.py
swelldb/search/: utils.py
swelldb/table_plan/: meta.py  mode.py  planner.py
swelldb/table_plan/prompts/: table_prompt.jinja
swelldb/table_plan/table/physical/: custom_table.py  dataset_table.py  document_table.py  image_table.py  llm_table.py  physical_table.py  search_engine_table.py
swelldb/util/: config.py
tests/test_files/: mutation_affected_protein.csv  mutations.csv
